# EDA

./: pyproject.toml
docs/: index.html
docs/eda2/: index.html
notebooks/: index.html
src/eda/: dist.py  eda.py  eda2.py
