[project]
name = "eda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "JagpreetJakhar", email = "*************@gmail.com" }
]
requires-python = ">=3.12.3"
dependencies = [
    "marimo>=0.16.2",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "statadict>=1.1.0",
]

[project.scripts]
eda = "eda:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
